namespace java com.heepay.rpc.risk.model

struct TransOrderRiskModel {
   1:string merchantOrderNo;
   2:string TransNo;
   3:string productType;
   4:string productName;
   5:string merchantId;
   6:string merchantCompany;
   7:string transType;
   8:string transAmount;
   9:string bankCardType;
   10:string bankCardNo;
   11:string bankCardOwnerName;
   12:string bankCardOwnerIdCard;
   13:string bankCardOwnerMobile;
   14:string channelCode;
   15:string channelName;
   16:string channelTransType;
   17:string feeType;
   18:string bankCardOwnerType;
   19:string createTime;
   20:string transferBatchAmount;
   21:string feeAmount;
   22:string reqIp;
   23:string notifyUrl;
   24:string returnUrl;
   25:string associateLineNumber;
   26:string userType;
}